# gnome-builder

./: .editorconfig  Makefile.am  configure.ac  meson.build  meson_options.txt
contrib/egg/: Makefile.am  meson.build
contrib/gd/: Makefile.am
contrib/gstyle/: Makefile.am  meson.build
contrib/gstyle/tests/: Makefile.am
contrib/libeditorconfig/: Makefile.am
contrib/nautilus/: Makefile.am
contrib/pnl/: Makefile.am  meson.build
contrib/rg/: Makefile.am
contrib/search/: Makefile.am
contrib/tmpl/: Makefile.am  meson.build  tmpl-expr-scanner.l
contrib/xml/: Makefile.am
data/: Makefile.am
data/fonts/: Makefile.am
data/gsettings/: Makefile.am
data/icons/: Makefile.am
data/style-schemes/: Makefile.am
doc/reference/libide/: Makefile.am
help/: Makefile.am
libide/: Makefile.am  ide.h  meson.build
libide/application/: ide-application-plugins.c
libide/refactory/: ide-refactory-command.c  ide-refactory-command.h  ide-refactory.c  ide-refactory.h
libide/shortcuts/: ide-shortcut-context.c  ide-shortcut-context.h  ide-shortcut-controller.c  ide-shortcut-controller.h  ide-shortcut-manager.c  ide-shortcut-manager.h  ide-shortcut-theme.c  ide-shortcut-theme.h
libide/workbench/: ide-workbench.c
plugins/: Makefile.am  meson.build
plugins/autotools/: Makefile.am  meson.build
plugins/autotools-templates/: Makefile.am
plugins/build-tools/: Makefile.am  meson.build
plugins/c-pack/: Makefile.am  meson.build
plugins/clang/: Makefile.am  meson.build
plugins/cmake/: cmake.plugin  cmake_plugin.py
plugins/color-picker/: Makefile.am  meson.build
plugins/command-bar/: Makefile.am  meson.build
plugins/comment-code/: Makefile.am  meson.build
plugins/contributing/: Makefile.am  meson.build
plugins/create-project/: Makefile.am  meson.build
plugins/ctags/: Makefile.am  meson.build
plugins/debugger/: Makefile.am  OVERVIEW.md  configure.ac  debugger.gresource.xml  debugger.plugin  gbp-debugger-breakpoints.c  gbp-debugger-breakpoints.h  gbp-debugger-editor-view-addin.c  gbp-debugger-editor-view-addin.h  gbp-debugger-gutter-renderer.c  gbp-debugger-gutter-renderer.h  gbp-debugger-perspective.c  gbp-debugger-perspective.h  gbp-debugger-perspective.ui  gbp-debugger-plugin.c  gbp-debugger-service.c  gbp-debugger-service.h  gbp-debugger-workbench-addin.c  gbp-debugger-workbench-addin.h
plugins/devhelp/: Makefile.am  gbp-devhelp-panel.c  gbp-devhelp-workbench-addin.c  meson.build
plugins/file-search/: Makefile.am  meson.build
plugins/flatpak/: Makefile.am  gbp-flatpak-configuration-provider.c  gbp-flatpak-configuration.c  gbp-flatpak-configuration.h  meson.build
plugins/fpaste/: Makefile.am
plugins/gcc/: Makefile.am  meson.build
plugins/gettext/: Makefile.am  meson.build
plugins/git/: Makefile.am  meson.build
plugins/gnome-code-assistance/: Makefile.am  meson.build
plugins/hello-cpp/: meson.build
plugins/html-completion/: Makefile.am  meson.build
plugins/html-preview/: Makefile.am
plugins/jedi/: Makefile.am
plugins/jhbuild/: Makefile.am
plugins/mingw/: Makefile.am  meson.build
plugins/project-tree/: Makefile.am  meson.build
plugins/python-gi-imports-completion/: Makefile.am
plugins/python-pack/: Makefile.am  meson.build
plugins/quick-highlight/: Makefile.am  meson.build
plugins/search-and-replace/: search_and_replace.py
plugins/support/: Makefile.am  meson.build
plugins/symbol-tree/: Makefile.am  meson.build
plugins/sysmon/: Makefile.am  meson.build
plugins/sysprof/: Makefile.am  meson.build
plugins/terminal/: Makefile.am  gb-terminal-workbench-addin.c  meson.build
plugins/todo/: Makefile.am
plugins/vala-pack/: Makefile.am  meson.build
plugins/xml-pack/: Makefile.am  ide-xml-service.c  ide-xml-tree-builder.c  meson.build
po/: POTFILES.in  meson.build
tests/: Makefile.am  test-fuzzy.c  test-ide-buffer-manager.c  test-ide-context.c
tools/: Makefile.am
