i18n = import('i18n')

langs = [
  'bs',
  'ca',
  'cs',
  'da',
  'de',
  'el',
  'en_GB',
  'eo',
  'es',
  'fr',
  'gl',
  'he',
  'hu',
  'id',
  'it',
  'kk',
  'ko',
  'lt',
  'lv',
  'nb',
  'nl',
  'oc',
  'pl',
  'pt',
  'pt_BR',
  'sk',
  'sl',
  'sr',
  'sr@latin',
  'sv',
  'tr',
  'uk',
  'zh_TW',
]

i18n.gettext('gnome-builder',
  languages: langs,
  args: [
    '--from-code=UTF-8',
    '--keyword=g_dngettext:2,3',
    '--add-comments',
    '--msgid-bugs-address=https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-builder&keywords=I18N+L10N&component=general',
  ],
  data_dirs: [join_paths(meson.source_root(), 'contrib/gstyle/data')],
)
